# motion-triage

./: .gitignore  README.md
docs/: API.md  DATASETS.md  DATASETS_V3_IDENTITY.md  DATA_PLAYBOOK.md  TRAINING_SPEC.md  V4_CARRIED_ITEM.md  v3_identity_face_replacement.md
proto/: motion.proto
service/: .gitignore  Cargo.toml  supervise.sh  sus_policy.example.json
service/src/: behavior.rs  draw.rs  identity.rs  main.rs  pose.rs  sus.rs
service/testdata/: feature_parity.json  summarize_triage.py
training/: README.md  augment_clips.py  autotrain.py  clips_to_corpus.py  com.dvr.triage-train.plist  continuous_train.sh  dataset.py  features.py  fetch_meva.py  gen_parity_fixture.py  gen_synth_corpus.py  infer_mlx.py  meva_labels.py  prelabel.py  pull_recent_clips.py  render_demo.py  render_track.py  train.py  vlm_label.py
